Updating analysis javadoc